<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5C8F8">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E5C8F8"
        android:columnCount="4"
        android:rowCount="7">

        <TextView
            android:id="@+id/display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_columnSpan="4"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="20dp"
            android:background="#E5C8F8"
            android:fontFamily="@font/aclonica"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/displayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_columnSpan="4"
            android:layout_gravity="fill_horizontal|bottom"
            android:layout_marginBottom="20dp"
            android:background="#D9A8FA"
            android:gravity="end"
            android:padding="10dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="#000000"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="#353535"
            android:text="@string/seven"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="#353535"
            android:text="@string/eight"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="#353535"
            android:text="@string/nine"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_marginStart="7dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="#353535"
            android:text="@string/div"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="#353535"
            android:text="@string/four"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="#353535"
            android:text="@string/five"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="#353535"
            android:text="@string/six"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_marginStart="7dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="#353535"
            android:text="@string/mul"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="#353535"
            android:text="@string/one"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="#353535"
            android:text="@string/two"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="#353535"
            android:text="@string/three"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_marginStart="7dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="#353535"
            android:text="@string/sub"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#353535"
            android:text="@string/zero_zero"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#353535"
            android:text="@string/zero"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/buttonDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="2"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#353535"
            android:text="@string/dot"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="3"
            android:layout_marginStart="7dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#353535"
            android:text="@string/add"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#353535"
            android:text="@string/clear"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="1"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#353535"
            android:text="@string/back"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/buttonEquals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="2"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#353535"
            android:text="@string/equal"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/buttonModule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="3"
            android:layout_marginStart="7dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#353535"
            android:text="@string/module"
            android:textColor="#FFFFFF" />
    </GridLayout>
</RelativeLayout>